force-app/main/default/objects/Fee_Payment__c/Fee_Payment__c.object-meta.xml
<CustomObject>
    <label>Fee Payment</label>
    <nameField>
        <displayFormat>P -{0000}</displayFormat>
        <label>Payment S. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Payment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>