force-app/main/default/objects/Fee_Payment__c/fields/mail_Id__c.field-meta.xml
<CustomField>
    <fullName>mail_Id__c</fullName>
    <label>mail Id</label>
    <type>Email</type>
</CustomField>