force-app/main/default/objects/Fee_Payment__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <label>Student Name</label>
    <referenceTo>Registration_Form__c</referenceTo>
    <relationshipLabel>Fee Payment</relationshipLabel>
    <relationshipName>Fee_Payment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>