force-app/main/default/objects/Fee_Payment__c/fields/Total_due_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_due_amount__c</fullName>
    <formula>Total_Fees__c -( X1st_installment_paid_amount__c + X2nd_installment_paid_amount__c + X3rd_installment_paid_amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total due amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>