force-app/main/default/objects/Fee_Payment__c/fields/X1st_installment_date__c.field-meta.xml
<CustomField>
    <fullName>X1st_installment_date__c</fullName>
    <label>1st installment date</label>
    <type>Date</type>
</CustomField>