force-app/main/default/objects/Fee_Payment__c/fields/X1st_installment_paid_amount__c.field-meta.xml
<CustomField>
    <fullName>X1st_installment_paid_amount__c</fullName>
    <label>1st installment paid amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>