force-app/main/default/objects/Fee_Payment__c/fields/X2nd_installment_date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_installment_date__c</fullName>
    <label>2nd installment date</label>
    <type>Date</type>
</CustomField>