force-app/main/default/objects/Fee_Payment__c/fields/X2nd_installment_due_amount__c.field-meta.xml
<CustomField>
    <fullName>X2nd_installment_due_amount__c</fullName>
    <formula>Total_Fees__c - X1st_installment_paid_amount__c</formula>
    <label>2nd installment due amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>