force-app/main/default/objects/Fee_Payment__c/fields/X3rd_installment_date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_installment_date__c</fullName>
    <label>3rd installment date</label>
    <type>Date</type>
</CustomField>