force-app/main/default/objects/Fee_Payment__c/fields/X3rd_installment_due_amount__c.field-meta.xml
<CustomField>
    <fullName>X3rd_installment_due_amount__c</fullName>
    <formula>X2nd_installment_due_amount__c - X2nd_installment_paid_amount__c</formula>
    <label>3rd installment due amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>