force-app/main/default/objects/Fee_Payment__c/fields/X3rd_installment_paid_amount__c.field-meta.xml
<CustomField>
    <fullName>X3rd_installment_paid_amount__c</fullName>
    <label>3rd installment paid amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>