force-app/main/default/objects/Fee_Payment__c/validationRules/back_date_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>back_date_rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(X1st_installment_date__c  &lt;&gt;  TODAY() , X2nd_installment_date__c &lt;&gt; TODAY() , X3rd_installment_date__c  &lt;&gt;  TODAY() )</errorConditionFormula>
    <errorMessage>You cannot select date from past and future</errorMessage>
</ValidationRule>