force-app/main/default/objects/Fee_Payment__c/validationRules/first_install_one_time_pay_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>first_install_one_time_pay_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Total_Fees__c  &lt;&gt; X1st_installment_paid_amount__c, NOT(ISPICKVAL( Mode_Of_Payment__c ,&apos;Installments&apos;)))</errorConditionFormula>
    <errorDisplayField>X1st_installment_paid_amount__c</errorDisplayField>
    <errorMessage>For one time payment , amount paid must equal to total fees</errorMessage>
</ValidationRule>