force-app/main/default/objects/Fee_Payment__c/validationRules/second_installment_paid_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>second_installment_paid_amount</fullName>
    <active>true</active>
    <errorConditionFormula>OR(X2nd_installment_paid_amount__c  &gt;  X2nd_installment_due_amount__c, X2nd_installment_paid_amount__c &lt;=0)</errorConditionFormula>
    <errorDisplayField>X2nd_installment_paid_amount__c</errorDisplayField>
    <errorMessage>2nd installment cannot be greater than due amount</errorMessage>
</ValidationRule>