force-app/main/default/objects/Fee_Payment__c/validationRules/third_insta_blank_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>third_insta_blank_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( X3rd_installment_due_amount__c ),NOT( ISBLANK( X3rd_installment_paid_amount__c ) ))</errorConditionFormula>
    <errorDisplayField>X3rd_installment_paid_amount__c</errorDisplayField>
    <errorMessage>3rd installment not eligible</errorMessage>
</ValidationRule>