force-app/main/default/objects/Fee_Payment__c/validationRules/third_installment_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>third_installment_rule</fullName>
    <active>true</active>
    <errorConditionFormula>X3rd_installment_paid_amount__c  &lt;&gt;  X3rd_installment_due_amount__c</errorConditionFormula>
    <errorDisplayField>X3rd_installment_paid_amount__c</errorDisplayField>
    <errorMessage>3rd installment must be equal to due amount</errorMessage>
</ValidationRule>