force-app/main/default/objects/Fee_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>Total_Fees__c</columns>
    <columns>Total_due_amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>